second paragraph in discussion

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -2344,19 +2344,19 @@ Most importantly, we found evidence that task-irrelevant self-referential proces
 The same trend appeared for the RT data. For shapes associated with good person, with a "self" inside the shape reduced the reaction times as compared with when a "other" inside the shape ($mean_{diff}$ = -55 ms, 95% HDI [-75, -35]), but this effect did not occur when the shapes were associated neutral ($mean_{diff}$ = 10, 95% HDI [1, 20]) or bad ($mean_{diff}$ = 5, 95% HDI [-16, 27]) person. See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
-Across nine experiments, we investigated the processing of moral character using a combination of social associative learning and perceptual matching task. We explored the mechanisms underlying the effect and found robust evidence that good character prioritized the shape-label matching task, regardless of the stimuli that used for representing moral characters. Moreover, this prioritization of good character was driven by a spontaneous self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. The prioritization effect occur when both self and good character are presented, regardless of their task-relevance. In contrast, when good character became other-referential, even implicitly, the information process was slowed down, suggesting a process that opposite to self-binding. Together, these findings highlight the importance of the self-referential in perceiving information related to good character. These findings contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
+[Summary of results] Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-First, we examined the perceptual process of moral character to understand how moral information are processed. Prior research has demonstrated that bad moral behavior is stronger in impression formation [citation] and bad moral character are attended quicker than neutral moral character []. The empirical studies on the moral character often focus on self-reported  data rather than behavioral response. In this paper, we examined the perceptual processes of moral character. In doing so, we shifted the focus from consequences of information process of moral character to the information process itself, thus broaden the scope of the existing research. 
+[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making [van Bavel]. Previous research reported the effect of moral perception [] but the mechanism is disputed. For example, [Anderson et al 2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect []. Another studies by [] found that moral words are more likely to be judged as words when it was presented sublimial [], however, this effect may caused by semantic priming instead of morality []. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [Firestone; Jussim et al., 2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
 
-Second, perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
+Note that there is one critical difference between the current task and previous experiments that aimed at detection the effect of morality in lower-level information processing. Previous studies used the detection task, where participants need to detect whether or a stimulus exist. for example, in Anderson et al study, the task is to detect a face in awareness, in Gantman et al's study, the task is to detect existence of a word. By contrast, in our task, participants were required to recognize the stimuli pair and then make a decision. Previous review found that even for affective stimuli, results from detection and recognition tasks are not always consistent: while negativity effect are usual observed in the detection task, positiivity effect are often observed in recognition tasks []. This different may explains why in our experiments we found robust positivity effect for moral character. 
 
-The absence of negativiity effect may also caused by the fact that the bad character here is an abstract concept that may not bring concrete threatening to the participants, therefore it is not as strong as previous studies used emotional stimuli that has higher arousal. Besides, recent study found that when the moral violation is not life-threatening, the impression of bad character is volatile in the social context [].
+perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
 
-Third, knowing that good character and moral-self is prioritized is not sufficient; we need to know why this prioritization occurs. Our results indicate that the good character prioritization is driven by spontaneous self-referential processing. Also, these results revealed that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing. 
+[Self-binding as a novel explanation and consistent with broader theory about morality] However, the results found in our studies can not be explained by the theory the good thing are similar in the mental representation because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. By focusing on the agent who making the perceptual decisions, we explored the effect of self-referential in prioritization and found reliable modulation effect of self-referential process on the perception of good character. These results suggested that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing. 
 
-Fourth, we find that behavioral data and self-reported data doesn't congruent. When asked to rate the distance between self and good person, the distance is similar to the distance between self and neutral person. However, the distance between self and bad person is the longest, even longer than the distance between good and bad. These results might be caused by the social desirability effect that often occurs in self-reporting. However, we didn't not find strong evidence for the correlation between behavioral results and the self-reported person distance. 
+[Perspective] 
 
-[Memory or perception.] One would argue that the effect here may represent a memory effect instead of perpetual effect *per se*. (1) how to define perception is debated, while some researchers included memory components in perception, others do not. Here, we are more on the broader view of perception. (2), the memory effect view predict that the effect will be eliminated after participants became familiar with the association. We did supplementary analysis where we divided the whole experiment into three different stage: early, middle, and later, and then compared the results pattern of early and later stages. These results revealed null effect of training. These additional analysis suggested that memory effect may exist, but in a sense that they reflected a long-term, stable pattern of different moral character, instead of a short-term, associative learning induced effect.
+[limitations] One would argue that the effect here may represent a memory effect instead of perpetual effect *per se*. (1) how to define perception is debated, while some researchers included memory components in perception, others do not. Here, we are more on the broader view of perception. (2), the memory effect view predict that the effect will be eliminated after participants became familiar with the association. We did supplementary analysis where we divided the whole experiment into three different stage: early, middle, and later, and then compared the results pattern of early and later stages. These results revealed null effect of training. These additional analysis suggested that memory effect may exist, but in a sense that they reflected a long-term, stable pattern of different moral character, instead of a short-term, associative learning induced effect.
 
 [free association from small world of words]
 
